# libinfinitton

./: README.md  main.c  meson.build
examples/: meson.build
examples/pomodoro/: main.c  meson.build
examples/taskman/: main.c  meson.build
include/: device.h  infinitton.h  keys.h  meson.build  pixmap.h  util.h
include/infinitton/: device.h  infinitton.h  keys.h  pixmap.h
lib/: meson.build
resources/: 99-infinitton.rules
src/: device.c  meson.build  pixmap.c  util.c
src/infctl/: main.c  meson.build
